--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cherio": "^1.0.0-rc.2",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
