--- a/Browser Extension/manifest.json
+++ b/Browser Extension/manifest.json
@@ -1,16 +1,14 @@
 {
-    "manifest_version": 2,
-    "name": "Realtime Censorship",
-    "version": "1.0",
-    "description": "An Extension to redact all NSFW content",
-    "permissions": ["webRequest", "webRequestBlocking", "<all_urls>"],
-    "background": {
-      "scripts": ["background.js"]
-    },
-    "content_scripts": [
-      {
-        "matches": ["*://*/*"],
-        "js": ["realtimeCensorship.js"]
-      }
-    ]
-  }
+  "name": "Realtime Censorship",
+  "description": "An Extension to redact all NSFW content",
+  "version": "1.0",
+  "manifest_version": 3,
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "logo.png"
+  },
+  "icons": {
+    "128": "logo.png"
+  },
+  "permissions": ["activeTab", "scripting"]
+}
