--- a/Express Server/package.json
+++ b/Express Server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tensorflow-models/toxicity": "^1.2.2",
     "@tensorflow/tfjs": "^4.2.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.21"
