--- a/ImageServer/requirements.txt
+++ b/ImageServer/requirements.txt
@@ -1,71 +1,140 @@
-absl-py==1.4.0
+absl-py==1.2.0
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asgiref==3.5.2
+asttokens==2.0.8
 astunparse==1.6.3
-cachetools==5.3.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
+attrs==22.1.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+cachetools==5.2.0
+certifi==2022.9.14
+cffi==1.15.1
+charset-normalizer==2.1.1
 click==8.1.3
-colorama==0.4.6
-contourpy==1.0.7
-cors==1.0.1
+contourpy==1.0.5
 cycler==0.11.0
-filelock==3.10.7
-Flask==2.2.3
-flatbuffers==23.3.3
-fonttools==4.39.3
-future==0.18.3
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.6
+Django==4.1.2
+editdistance==0.6.2
+entrypoints==0.4
+executing==1.0.0
+fastjsonschema==2.16.2
+filelock==3.8.0
+Flask==2.2.2
+Flask-Cors==3.0.10
+flatbuffers==2.0.7
+fonttools==4.37.3
+Frozen-Flask==0.18
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
 gast==0.4.0
-gevent==22.10.2
-google-auth==2.17.0
+google-auth==2.11.1
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-greenlet==2.0.2
-grpcio==1.53.0
-h5py==3.8.0
+grpcio==1.49.1
+h5py==3.7.0
+huggingface-hub==0.12.1
 idna==3.4
+importlib-metadata==4.12.0
+ipykernel==6.15.3
+ipython==8.5.0
+ipython-genutils==0.2.0
 itsdangerous==2.1.2
-jax==0.4.8
+jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.2.0
-keras==2.12.0
+jsonschema==4.16.0
+jupyter-core==4.11.1
+jupyter_client==7.3.5
+jupyterlab-pygments==0.2.2
+kaggle==1.5.13
+keras==2.10.0
+Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
-libclang==16.0.0
-Markdown==3.4.3
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-ml-dtypes==0.0.4
-numpy==1.23.5
-oauthlib==3.2.2
-opencv-python==4.7.0.72
+libclang==14.0.6
+lxml==4.9.1
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.6.0
+matplotlib-inline==0.1.6
+mistune==2.0.4
+nbclient==0.6.8
+nbconvert==7.0.0
+nbformat==5.6.0
+nest-asyncio==1.5.5
+notebook==6.4.12
+numpy==1.23.3
+oauthlib==3.2.1
+opencv-python==4.6.0.66
 opt-einsum==3.3.0
-packaging==23.0
-pandas==1.5.3
-Pillow==9.4.0
-protobuf==4.22.1
+packaging==21.3
+pandas==1.5.0
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+platformdirs==2.5.2
+prometheus-client==0.14.1
+prompt-toolkit==3.0.31
+protobuf==3.19.5
+psutil==5.9.2
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.21
+Pygments==2.13.0
+pymongo==4.2.0
 pyparsing==3.0.9
-PySocks==1.7.1
+pyrsistent==0.18.1
 python-dateutil==2.8.2
-pytz==2023.3
-requests==2.28.2
-requests-file==1.5.1
+python-slugify==8.0.1
+python-whois==0.8.0
+pytz==2022.2.1
+PyYAML==6.0
+pyzmq==24.0.1
+regex==2022.10.31
+requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
-scikit-learn==1.2.2
-scipy==1.10.1
-six==1.16.0
-tensorboard==2.12.0
-tensorboard-data-server==0.7.0
+scikit-learn==1.1.2
+scipy==1.9.1
+seaborn==0.12.1
+Send2Trash==1.8.0
+six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/six-1.15.0-py2.py3-none-any.whl
+soupsieve==2.3.2.post1
+sqlparse==0.4.3
+stack-data==0.5.0
+tensorboard==2.10.0
+tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.32.0
-termcolor==2.2.0
+tensorflow-estimator==2.10.0
+tensorflow-macos==2.10.0
+tensorflow-metal==0.6.0
+termcolor==2.0.1
+terminado==0.15.0
+text-unidecode==1.3
 threadpoolctl==3.1.0
-tldextract==3.4.0
-typing_extensions==4.5.0
-urllib3==1.26.15
-Werkzeug==2.2.3
+tinycss2==1.1.1
+tokenizers==0.13.2
+torch==1.13.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.4.0
+transformers==4.26.1
+typing_extensions==4.3.0
+urllib3==1.26.12
+virtualenv==20.16.5
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.2.2
 wrapt==1.14.1
-zope.event==4.6
-zope.interface==6.0
+zipp==3.8.1
