--- a/Express Server/package.json
+++ b/Express Server/package.json
@@ -13,6 +13,7 @@
     "@tensorflow/tfjs": "^4.2.0",
     "@tensorflow/tfjs-converter": "^4.2.0",
     "@tensorflow/tfjs-core": "^4.2.0",
+    "@tensorflow/tfjs-node": "^4.2.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
