--- a/ImageServer/requirements.txt
+++ b/ImageServer/requirements.txt
@@ -53,8 +53,7 @@ tensorboard==2.11.2
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow-estimator==2.11.0
-tensorflow-macos==2.11.0
-tensorflow-metal==0.7.1
+tensorflow==2.11.0
 termcolor==2.2.0
 tldextract==3.4.0
 typing_extensions==4.5.0
