--- a/ImageServer/requirements.txt
+++ b/ImageServer/requirements.txt
@@ -10,6 +10,7 @@ cors==1.0.1
 cycler==0.11.0
 filelock==3.10.7
 Flask==2.2.3
+Flask-Cors==3.0.10
 flatbuffers==23.3.3
 fonttools==4.39.3
 future==0.18.3
@@ -41,6 +42,7 @@ Pillow==9.4.0
 protobuf==3.19.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pybase64==1.2.3
 pyparsing==3.0.9
 PySocks==1.7.1
 python-dateutil==2.8.2
@@ -52,9 +54,9 @@ six==1.16.0
 tensorboard==2.11.2
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
+tensorflow==2.11.0
 tensorflow-estimator==2.11.0
-tensorflow-macos==2.11.0
-tensorflow-metal==0.7.1
+tensorflow-io-gcs-filesystem==0.32.0
 termcolor==2.2.0
 tldextract==3.4.0
 typing_extensions==4.5.0
